ipc/ipdl/test/ipdl/ok/PheaderProto.ipdl
include header;

namespace c {

protocol PheaderProto {
child:
    async __delete__(foo a, baz b, Inner1 c, Inner2 d, X x);
};

}
